--- a/app/src/main/res/layout/lista_cartas_row.xml
+++ b/app/src/main/res/layout/lista_cartas_row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,33 +13,36 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/typeCard"
-        app:layout_constraintLeft_toLeftOf="@+id/nameCard"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/nameCard" />
+        app:layout_constraintTop_toBottomOf="@+id/nameCard"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline2" />
 
     <TextView
         android:text="@string/color5"
         android:id="@+id/colorCard"
         android:layout_width="0dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/rarityCard"
-        app:layout_constraintBottom_toTopOf="@+id/guideline3" />
+        app:layout_constraintBottom_toTopOf="@+id/guideline3"
+        android:layout_marginTop="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
+        app:layout_constraintVertical_bias="0.57"
+        android:layout_marginBottom="8dp" />
 
     <TextView
         android:text="@string/rarity4"
         android:id="@+id/rarityCard"
-        app:layout_constraintLeft_toLeftOf="@+id/typeCard"
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/typeCard" />
+        app:layout_constraintTop_toBottomOf="@+id/typeCard"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline2" />
 
     <TextView
         android:text="@string/name4"
@@ -58,12 +62,11 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintVertical_bias="0.25" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintBottom_toTopOf="@+id/guideline3"
+        app:layout_constraintTop_toTopOf="@+id/guideline4"
+        app:layout_constraintVertical_bias="0.0" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
@@ -75,21 +78,21 @@
         tools:layout_editor_absoluteX="98dp" />
 
     <android.support.constraint.Guideline
-        android:layout_width="384dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/guideline3"
-        app:layout_constraintGuide_begin="141dp"
+        app:layout_constraintGuide_begin="177dp"
         android:orientation="horizontal"
-        tools:layout_editor_absoluteY="141dp"
+        tools:layout_editor_absoluteY="177dp"
         tools:layout_editor_absoluteX="0dp" />
 
     <android.support.constraint.Guideline
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/guideline4"
-        app:layout_constraintGuide_begin="20dp"
+        app:layout_constraintGuide_begin="13dp"
         android:orientation="horizontal"
-        tools:layout_editor_absoluteY="20dp"
+        tools:layout_editor_absoluteY="13dp"
         tools:layout_editor_absoluteX="0dp" />
 
 </android.support.constraint.ConstraintLayout>
