--- a/app/src/main/res/layout-large/content_cartas__magic.xml
+++ b/app/src/main/res/layout-large/content_cartas__magic.xml
@@ -3,23 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <fragment
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:name="com.example.a47276138y.cartas_magic.DetailActivityFragment"
-        android:id="@+id/fragment3"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
-        tools:layout="@layout/fragment_detail" />
 
     <fragment
         android:layout_width="0dp"
@@ -30,20 +16,34 @@
         app:layout_constraintRight_toLeftOf="@+id/guideline5"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <fragment
+        android:layout_height="0dp"
+        android:name="com.example.a47276138y.cartas_magic.DetailActivityFragment"
+        android:id="@+id/fragment3"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="0dp" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
-        android:layout_height="887dp"
+        android:layout_height="0dp"
         android:id="@+id/guideline5"
         android:orientation="vertical"
         tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="274dp"
-        app:layout_constraintGuide_percent="0.45666668" />
+        tools:layout_editor_absoluteX="0dp"
+        app:layout_constraintGuide_percent="0.46333334" />
 </android.support.constraint.ConstraintLayout>
